[workspace]
default-members = ["crates/topos"]
members = [
    "crates/*"
]

[workspace.dependencies]

topos-core = { path = "./crates/topos-core", default-features = false }

async-trait = { version = "0.1", default-features = false }
async-stream = { version = "0.3", default-features = false }
futures = { version = "0.3" }
libp2p = { version = "0.49", default-features = false, features = ["noise"]}
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_distr = { version = "0.4", default-features = false }
rstest = { version = "0.16", default-features = false }
serde = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.20", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tonic = { version = "0.8", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
ethereum-types = { version = "0.12.1"}
serde_json = { version = "1.0", default-features = false }
byteorder = { version = "1.4", default-features = false }
uuid = { version = "1.1.2", default-features = false, features = ["v4"] }
bytes = { version = "1.3", default-features = false }
hyper = { version = "0.14", features = ["full"] }
hex = { version = "0.4", default-features = false }
web3 = { version = "0.18", features = ["signing"]}
pretty_env_logger = { version = "0.4", default-features = false }
clap = { version = "4.0", features = ["derive", "env"] }
bincode = { version = "1.3", default-features = false }
prost = {version = "0.11"}

