[workspace]
default-members = ["crates/topos"]
members = [
    "crates/*"
]

[workspace.dependencies]
topos-core = { path = "./crates/topos-core", default-features = false }
topos-crypto = { path = "./crates/topos-crypto", default-features = false }

clap = { version = "4.0", features = ["derive", "env"] }
hyper = { version = "0.14", features = ["full"] }
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_distr = { version = "0.4", default-features = false }

# Async & Tokio related
async-stream = { version = "0.3", default-features = false }
async-trait = { version = "0.1", default-features = false }
futures = { version = "0.3" }
tokio = { version = "1.24", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tower = "0.4"

# Blockchain
ethereum-types = { version = "0.12.1"}
secp256k1 = {version = "0.21.3", features = ["recovery"]}
web3 = { version = "0.18", features = ["signing"]}

# Log, Tracing & telemetry
opentelemetry = { version = "0.18", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = " 0.11", features = ["tonic", "metrics", "tls", "tls-roots"] }
opentelemetry-jaeger = { version = " 0.17" }
tracing = { version = "0.1", default-features = false }
tracing-attributes = "0.1"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", default-features = false }

# gRPC
prost = {version = "0.11"}
tonic = { version = "0.8", default-features = false }

# P2P related
libp2p = { version = "0.50", default-features = false, features = ["noise"]}

# Serialization & Deserialization
bincode = { version = "1.3", default-features = false }
byteorder = { version = "1.4", default-features = false }
bytes = { version = "1.3", default-features = false }
hex = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
uuid = { version = "1.1.2", default-features = false, features = ["v4"] }

# Tests
rstest = { version = "0.16", default-features = false }
test-log = { version = "0.2", features = ["trace"] }
env_logger = { version = "0.10.0"} # Needed by test-log to print traces in tests
