[workspace]
default-members = ["crates/topos"]
members = [
    "crates/*"
]

[workspace.dependencies]
topos-core = { path = "./crates/topos-core", default-features = false }
topos-crypto = { path = "./crates/topos-crypto", default-features = false }

# Various utility crates
clap = { version = "4.0", features = ["derive", "env", "string"] }
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_distr = { version = "0.4", default-features = false }

# Async & Tokio related
async-stream = { version = "0.3", default-features = false }
async-trait = { version = "0.1", default-features = false }
futures = { version = "0.3" }
tokio = { version = "1.24", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tower = "0.4"

# Blockchain
ethereum-types = { version = "0.13.1"}
secp256k1 = {version = "0.27", features = ["recovery"]}
tiny-keccak = {version = "1.5"}
ethers = {version = "2.0.4", features = ["legacy", "abigen-online"]}

# Log, Tracing & telemetry
opentelemetry = { version = "0.19", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.12", features = ["grpc-tonic", "metrics", "tls-roots"] }
tracing = { version = "0.1", default-features = false }
tracing-attributes = "0.1"
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3", default-features = false }

# gRPC
prost = {version = "0.11"}
tonic = { version = "0.9", default-features = false }

# Axum server (GraphQL + Metrics)
axum = "0.6"
async-graphql = "5"
async-graphql-axum = "5"
http = "0.2.9"
tower-http = { version = "0.4", features = ["cors"] }

# P2P related
# libp2p = { version = "0.52", default-features = false, features = ["noise"]}
libp2p = { branch = "bump-yamux", git = "https://github.com/libp2p/rust-libp2p.git", default-features = false, features = ["noise"]}

# Serialization & Deserialization
bincode = { version = "1.3", default-features = false }
byteorder = { version = "1.4", default-features = false }
bytes = { version = "1.3", default-features = false }
hex = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
uuid = { version = "1.1.2", default-features = false, features = ["v4"] }
base64 = { version = "0.21.0"}

# Network related
backoff = { version = "0.4", features = ["tokio", "futures"] }
hyper = { version = "0.14.26", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Tests
rstest = { version = "0.17.0", default-features = false }
test-log = { version = "0.2", features = ["trace"] }
env_logger = { version = "0.10.0"} # Needed by test-log to print traces in tests
serial_test = {version = "0.9.0"}
