[package]
name = "cert-spammer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "cert-spammer"
path = "src/main.rs"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
log = "0.4.14"
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
clap = { version = "3.0.10", features = ["derive", "env"] }
pretty_env_logger = "0.4.0"
libp2p = "0.41.1"
rand_distr = "0.4.1"
rand_core = "0.6.0"
rand = "0.8.5"
config = "0.13.1"
glob = "0.3.0"
tokio = { version = "1.15.0", features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }

tce_uci = { package = "topos-tce-uci", path = "../uci" }
tce_net = { package = "topos-tce-node-net", path = "../node/net" }
tce_api = { package = "topos-tce-node-api", path = "../node/api" }