[package]
name = "topos-api"
version = "0.1.0"
edition = "2021"

[dependencies]
topos-uci = { path = "../topos-uci"}

tonic = { workspace = true, default-features = false, features = [
    "prost",
    "codegen",
    "transport",
] }
ethereum-types.workspace = true
hex.workspace = true
prost.workspace = true
uuid.workspace = true


[build-dependencies]
tonic-build = { version = "0.8", default-features = false, features = [
    "prost", "transport"
] }

[dev-dependencies]
async-stream.workspace = true
futures.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tower.workspace = true
