[package]
name = "topos-api"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
default = ["grpc"]
grpc = []
graphql = []

[dependencies]
topos-uci = { path = "../topos-uci"}

tonic = { workspace = true, default-features = false, features = [
    "prost",
    "codegen",
    "transport",
] }

async-graphql.workspace = true
async-trait.workspace = true
base64ct.workspace = true
hex.workspace = true
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-build = { version = "0.10", default-features = false, features = [
    "prost", "transport"
] }

[dev-dependencies]
async-stream.workspace = true
env_logger.workspace = true
futures.workspace = true
rstest.workspace = true
test-log.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing.workspace = true

topos-test-sdk = { path = "../topos-test-sdk/" }
