[package]
name = "topos-api"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
default = ["grpc"]
grpc = []
graphql = []

[dependencies]
topos-uci = { path = "../topos-uci"}

tonic = { workspace = true, default-features = false, features = [
    "prost",
    "codegen",
    "transport",
] }
ethereum-types.workspace = true
hex.workspace = true
prost.workspace = true
thiserror.workspace = true
uuid.workspace = true
base64ct.workspace = true
axum.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
serde.workspace = true
async-trait.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build = { workspace = true, default-features = false, features = [
    "prost", "transport"
] }

[dev-dependencies]
async-stream.workspace = true
futures.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tower.workspace = true
test-log.workspace = true
env_logger.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing.workspace = true

topos-test-sdk = { path = "../topos-test-sdk/" }
