[package]
name = "topos-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
topos-uci = { path = "../topos-uci", optional = true }
topos-api = { path = "../topos-api", optional = true }
topos-crypto = { path = "../topos-crypto" }
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
hex.workspace = true

[features]
default = []

uci = ["topos-uci"]
api = ["topos-api"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustc-args = ["--cfg", "docsrs"]
