[package]
name = "topos-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
topos-api = { path = "../topos-api", optional = true }
topos-crypto = { path = "../topos-crypto" }
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
hex.workspace = true

[features]
default = []

uci = []
api = ["topos-api"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustc-args = ["--cfg", "docsrs"]
