[package]
name = "topos-crypto"
description = "Implementation of the Topos cryptography utility functions"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
secp256k1.workspace = true
byteorder.workspace = true
hex.workspace = true
thiserror.workspace = true

keccak-hash = "0.10.0"
eth-keystore = "0.5.0"
