[package]
name = "topos-node-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.15.0", features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }

topos-core = { git = "https://github.com/toposware/topos-core", branch = "main", features = ["uci"], version = "0.1.0" }

bytes = "1.1.0"
