[package]
name = "topos-node"
description = "Implementation of the Topos protocol"
license = "MIT"
version = "0.1.0"
authors = ["Toposware Developers <dev@toposware.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
clap = { version = "3.0.10", features = ["derive", "env"] }
libp2p = { version = "0.41.1", features = ["tcp-tokio"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version = "1.15.0", features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
rpassword = "7.0.0"

topos-core = { git = "https://github.com/toposware/topos-core", branch = "main", features = ["uci"], version = "0.1.0" }
topos-node-api = { package = "topos-node-api", path = "../topos-node-api" }
topos-node-certification = { package = "topos-node-certification", path = "../topos-node-certification" }
topos-node-types = { package = "topos-node-types", path = "../topos-node-types" }
topos-node-subnet-runtime-proxy = { package = "topos-node-subnet-runtime-proxy", path = "../topos-node-subnet-runtime-proxy" }
topos-node-tce-proxy = { package = "topos-node-tce-proxy", path = "../topos-node-tce-proxy" }


