[package]
name = "topos-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
bincode.workspace = true
futures.workspace = true
lazy_static.workspace = true
prometheus-client.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing = { workspace = true, features = ["attributes"] }
libp2p = { workspace = true, features = ["macros", "gossipsub", "tcp", "dns", "tokio", "request-response", "identify", "kad", "serde", "yamux"] }

void = "1"

topos-metrics = { path = "../topos-metrics/" }

[dev-dependencies]
test-log.workspace = true
env_logger.workspace = true
rstest = { workspace = true, features = ["async-timeout"] }
tracing-subscriber.workspace = true

topos-test-sdk = { path = "../topos-test-sdk/", features = ["tce"] }
