[package]
name = "topos-p2p"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bincode.workspace = true
futures.workspace = true
lazy_static.workspace = true
prometheus-client.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tokio-stream.workspace = true
tracing = { workspace = true, features = ["attributes"] }
libp2p = { workspace = true, features = ["macros", "gossipsub", "tcp", "dns", "tokio", "request-response", "identify", "kad", "serde", "yamux", "secp256k1"] }
hex.workspace = true
unsigned-varint = { version = "0.7.1", features = ["futures", "asynchronous_codec"] }
void = "1"
tonic = {workspace = true, features = ["tls", "tls-roots"]}
tower.workspace = true

topos-api = {path = "../topos-api/", features = ["grpc"]}
topos-metrics = { path = "../topos-metrics/" }
topos-crypto = { path = "../topos-crypto" }
smallvec = "1.11.1"
bytes.workspace = true
h2 = "0.3.21"
prost.workspace = true
http.workspace = true
http-body = "0.4.5"
http-body-util = "0.1.0-rc.3"
hyper.workspace = true
uuid.workspace = true
pin-project = "1.1.3"

[dev-dependencies]
test-log.workspace = true
env_logger.workspace = true
rstest = { workspace = true, features = ["async-timeout"] }
tracing-subscriber.workspace = true
topos-test-sdk = { path = "../topos-test-sdk/", features = ["tce"] }
