[package]
name = "topos-p2p"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bincode.workspace = true
bytes.workspace = true
futures.workspace = true
hex.workspace = true
http-body = "0.4.5"
http-body-util = "0.1.0-rc.3"
http.workspace = true
lazy_static.workspace = true
libp2p = { workspace = true, features = ["macros", "gossipsub", "tcp", "dns", "tokio", "request-response", "identify", "kad", "serde", "yamux", "secp256k1"] }
pin-project = "1.1.3"
libp2p-swarm-test = "0.2.0"
prometheus-client.workspace = true
serde = { workspace = true, features = ["derive"] }
smallvec = "1.11.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-util.workspace = true
tonic = {workspace = true, features = ["tls", "tls-roots"]}
topos-api = {path = "../topos-api/", features = ["grpc"]}
topos-crypto = { path = "../topos-crypto" }
topos-metrics = { path = "../topos-metrics/" }
tower.workspace = true
tracing = { workspace = true, features = ["attributes"] }
uuid.workspace = true
void = "1"
hyper.workspace = true

[dev-dependencies]
test-log.workspace = true
env_logger.workspace = true
rstest = { workspace = true, features = ["async-timeout"] }
tracing-subscriber.workspace = true
topos-test-sdk = { path = "../topos-test-sdk/", features = ["tce"] }
rand.workspace = true
