[package]
name = "topos-sequencer-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
topos-core = { workspace = true, features = ["uci"] }

serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
hyper.workspace = true
