[package]
name = "topos-sequencer-certification"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
byteorder = "1.4.3"
log = "0.4.14"
tokio = { version = "1.15.0", features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
rand_distr = "0.4.1"
rand_core = "0.6.0"
rand = "0.8.5"
thiserror = "1.0"
hex = "0.4.3"

topos-sequencer-types = { package = "topos-sequencer-types", path = "../topos-sequencer-types" }
topos-core = { workspace = true, features = ["uci"] }

[dev-dependencies]
pretty_env_logger = "0.4.0"

