[package]
name = "topos-sequencer-certification"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true, features = ["default"] }
rand_core.workspace = true
rand_distr.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
byteorder.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true

topos-sequencer-types = { package = "topos-sequencer-types", path = "../topos-sequencer-types" }
topos-core = { workspace = true, features = ["uci"] }


