[package]
name = "topos-sequencer-certification"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder.workspace = true
hex.workspace = true
rand = { workspace = true, features = ["default"] }
rand_core.workspace = true
rand_distr.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
tracing-subscriber.workspace = true
tracing.workspace = true

topos-sequencer-types = { package = "topos-sequencer-types", path = "../topos-sequencer-types" }
topos-core = { workspace = true, features = ["uci"] }
