[package]
name = "topos-sequencer-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
topos-core = { workspace = true, features = ["uci", "api"] }
topos-commands = { path = "../topos-commands/" }

async-stream.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json = { workspace = true}
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true
