[package]
name = "topos-sequencer-subnet-client"
version = "0.1.0"
edition = "2021"

[dependencies]
hex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
web3.workspace = true
secp256k1.workspace = true
tokio.workspace = true
backoff.workspace = true

tiny-keccak = "1.2"

topos-sequencer-types = { package = "topos-sequencer-types", path = "../topos-sequencer-types" }
topos-core = { workspace = true, features = ["uci"] }
