[package]
name = "topos-sequencer-subnet-client"
version = "0.1.0"
edition = "2021"

[dependencies]
hex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
backoff.workspace = true
serde = { workspace = true, features = ["derive"] }
tiny-keccak.workspace = true
ethers.workspace = true
ethers-providers = { version = "2.0.8", features = ["ws"] }
rustc-hex = "2.1.0"

topos-core = { workspace = true, features = ["uci", "api"] }

[build-dependencies]
ethers.workspace = true
