[package]
name = "topos-sequencer-subnet-runtime-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create-keystore"
path = "src/keystore.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true, features = ["default"] }
rand_core.workspace = true
rand_distr.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
byteorder.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
clap.workspace = true
eth-keystore = "0.5.0"
ethereum-tx-sign = "6.0"

topos-sequencer-types = { package = "topos-sequencer-types", path = "../topos-sequencer-types" }
topos-sequencer-subnet-client = { package = "topos-sequencer-subnet-client", path = "../topos-sequencer-subnet-client" }
topos-core = { workspace = true, features = ["uci"] }

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true
web3.workspace = true
serial_test = "0.9"
dockertest = "0.3.1"
secp256k1 = { version = "0.21", features = ["recovery"]}
tiny-keccak = "1.2"
