[package]
name = "topos-sequencer-subnet-runtime-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create-keystore"
path = "src/keystore.rs"

[dependencies]
byteorder.workspace = true
clap.workspace = true
eth-keystore = "0.5.0"
ethereum-tx-sign = "6.0"
hex.workspace = true
rand = { workspace = true, features = ["default"] }
rand_core.workspace = true
rand_distr.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
tracing-subscriber.workspace = true
tracing.workspace = true

topos-core = { workspace = true, features = ["uci"] }
topos-sequencer-subnet-client = { package = "topos-sequencer-subnet-client", path = "../topos-sequencer-subnet-client" }
topos-sequencer-types = { package = "topos-sequencer-types", path = "../topos-sequencer-types" }

[dev-dependencies]
dockertest = "0.3.1"
fs_extra = "1.2"
rstest.workspace = true
secp256k1 = { version = "0.21", features = ["recovery"]}
serde_json.workspace = true
serial_test = "0.9"
tiny-keccak = "1.2"
web3.workspace = true
