[package]
name = "topos-sequencer-subnet-runtime-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder.workspace = true
clap.workspace = true
hex.workspace = true
rand = { workspace = true, features = ["default"] }
rand_core.workspace = true
rand_distr.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing.workspace = true

topos-core = { workspace = true, features = ["uci"] }
topos-sequencer-subnet-client = { package = "topos-sequencer-subnet-client", path = "../topos-sequencer-subnet-client" }
topos-sequencer-types = { package = "topos-sequencer-types", path = "../topos-sequencer-types" }
topos-crypto = {package = "topos-crypto", path = "../topos-crypto"}

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true
web3.workspace = true
test-log.workspace = true
env_logger.workspace = true
secp256k1.workspace = true
serial_test = "0.9"
tiny-keccak = "1.2"
dockertest = "0.3.1"
fs_extra = "1.2"
