[package]
name = "topos-sequencer-subnet-runtime"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
byteorder.workspace = true
hex.workspace = true
rand = { workspace = true, features = ["default"] }
rand_core.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true

topos-core = { workspace = true, features = ["uci"] }
topos-sequencer-subnet-client = { package = "topos-sequencer-subnet-client", path = "../topos-sequencer-subnet-client" }
topos-crypto = {package = "topos-crypto", path = "../topos-crypto"}

[dev-dependencies]
rstest = { workspace = true, features = ["async-timeout"] }
serde_json.workspace = true
test-log.workspace = true
env_logger.workspace = true
secp256k1.workspace = true
serial_test.workspace = true
tiny-keccak.workspace = true
ethers.workspace = true
fs_extra = "1.3"


topos-test-sdk = { path = "../topos-test-sdk/" }
