[package]
name = "topos-sequencer-subxt-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
log = "0.4.14"
subxt = { git = "https://github.com/paritytech/subxt.git", tag = "v0.22.0" }
topos-sequencer-types = { package = "topos-sequencer-types", path = "../topos-sequencer-types" }
jsonrpsee-types = "0.14.0"
serde_json = "1.0"
thiserror = "1.0"
ethabi = "17.2"
hex = "0.4.3"
ethereum-tx-sign = "6.0.0"
keccak-hash = "0.9"
secp256k1 = "0.24"
tiny-keccak = "1.2"

[dev-dependencies]
pretty_env_logger = "0.4.0"
