[package]
name = "topos-sequencer-tce-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
topos-sequencer-types = { package = "topos-sequencer-types", path = "../topos-sequencer-types" }
topos-core = { workspace = true, features = ["uci", "api"] }

serde = { workspace = true, features = ["derive"] }
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["transport"] }
serde_json.workspace = true
byteorder.workspace = true
uuid.workspace = true
async-stream.workspace = true
hyper.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
backoff = { version = "0.4", features = ["tokio"] }
hex = "0.4.3"

[dev-dependencies]
rstest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pretty_env_logger.workspace = true
serial_test = "0.9"
dockertest = "0.3.1"
byteorder = "1.4.3"
