[package]
name = "topos-sequencer-tce-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
topos-core = { workspace = true, features = ["uci", "api"] }
topos-sequencer-types = { package = "topos-sequencer-types", path = "../topos-sequencer-types" }

async-stream.workspace = true
backoff = { version = "0.4", features = ["tokio"] }
byteorder.workspace = true
futures.workspace = true
hex.workspace = true
hyper.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["transport"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "ansi", "fmt"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
topos-tce-transport = { path = "../topos-tce-transport" }
topos-tce = { path = "../topos-tce" }
rstest.workspace = true
test-log.workspace = true
env_logger.workspace = true
byteorder = "1.4.3"
dockertest = "0.3.1"
serial_test = "0.9"
topos-tce-storage = { path = "../topos-tce-storage" }
