[package]
name = "topos-sequencer"
description = "Implementation of the Topos protocol"
version = "0.1.0"
authors = ["Toposware Developers <dev@toposware.com>"]
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = {workspace = true, features = ["fmt", "std", "env-filter",]}
hex.workspace = true
clap.workspace = true
bincode.workspace = true

rpassword = "7.0.0"

topos-p2p = { path = "../topos-p2p/" }
topos-core = { workspace = true, features = ["uci"] }
topos-sequencer-certification = { package = "topos-sequencer-certification", path = "../topos-sequencer-certification" }
topos-sequencer-types = { package = "topos-sequencer-types", path = "../topos-sequencer-types" }
topos-sequencer-subnet-runtime-proxy = { package = "topos-sequencer-subnet-runtime-proxy", path = "../topos-sequencer-subnet-runtime-proxy" }
topos-sequencer-tce-proxy = { package = "topos-sequencer-tce-proxy", path = "../topos-sequencer-tce-proxy" }
topos-tce-transport = { package = "topos-tce-transport", path = "../topos-tce-transport" }
