[package]
name = "topos-sequencer"
description = "Implementation of the Topos protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode.workspace = true
hex.workspace = true
rpassword = "7.0.0"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = {workspace = true, features = ["fmt", "std", "env-filter",]}
tracing.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true

topos-crypto.workspace = true
topos-core = { workspace = true, features = ["uci"] }
topos-p2p = { path = "../topos-p2p/" }
topos-sequencer-certification = { package = "topos-sequencer-certification", path = "../topos-sequencer-certification" }
topos-sequencer-subnet-runtime-proxy = { package = "topos-sequencer-subnet-runtime-proxy", path = "../topos-sequencer-subnet-runtime-proxy" }
topos-sequencer-tce-proxy = { package = "topos-sequencer-tce-proxy", path = "../topos-sequencer-tce-proxy" }
topos-sequencer-types = { package = "topos-sequencer-types", path = "../topos-sequencer-types" }
topos-tce-transport = { package = "topos-tce-transport", path = "../topos-tce-transport" }

